--- a/grafana/grafana.dashboards.configmap.yaml
+++ b/grafana/grafana.dashboards.configmap.yaml
@@ -3128,6 +3128,26 @@ items:
       }
   kind: ConfigMap
   metadata:
+    name: grafana-datasources
+    namespace: monitoring
+  data:
+    prometheus.yaml: |-
+    {
+        "apiVersion": 1,
+        "datasources": [
+            {
+               "access":"proxy",
+                "editable": true,
+                "name": "prometheus",
+                "orgId": 1,
+                "type": "prometheus",
+                "url": "http://prometheus-service:9090",
+                "version": 1
+            }
+        ]
+    }
+  kind: ConfigMap
+  metadata:
     name: grafana-dashboard-cluster-total
     namespace: monitoring
 - apiVersion: v1
