--- a/grafana/grafana.dashboards.configmap.yaml
+++ b/grafana/grafana.dashboards.configmap.yaml
@@ -5,6 +5,7 @@ apiVersion: v1
 kind: ConfigMap
 metadata:
   name: grafana-datasources
+  namespace: monitoring
 data:
   datasources.yaml: |-
     apiVersion: 1
