--- a/grafana/grafana-deployment.yaml
+++ b/grafana/grafana-deployment.yaml
@@ -81,6 +81,12 @@ spec:
         - mountPath: /grafana-dashboard-definitions/0/application-health
           name: grafana-dashboard-application-health
           readOnly: false  
+        - mountPath: /grafana-dashboard-definitions/0/security-management-api
+          name: grafana-dashboard-security-management-api
+          readOnly: false  
+        - mountPath: /grafana-dashboard-definitions/0/experience-manager-api
+          name: grafana-dashboard-experience-manager-api
+          readOnly: false  
         - mountPath: /grafana-dashboard-definitions/0/node-cluster-rsrc-use
           name: grafana-dashboard-node-cluster-rsrc-use
           readOnly: false
@@ -171,6 +177,12 @@ spec:
       - configMap:
           name: grafana-dashboard-application-health
         name: grafana-dashboard-application-health
+      - configMap:
+          name: grafana-dashboard-security-management-api
+        name: grafana-dashboard-security-management-api    
+      - configMap:
+          name: grafana-dashboard-experience-manager-api
+        name: grafana-dashboard-experience-manager-api
       - configMap:
           name: grafana-dashboard-node-cluster-rsrc-use
         name: grafana-dashboard-node-cluster-rsrc-use
